--- a/01_getting_started.ipynb
+++ b/01_getting_started.ipynb
@@ -4,15 +4,15 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "skip"
     }
    },
    "source": [
     "# A quick overview\n",
     "\n",
-    "In this course you will get to know the programming language **Python**. You will get to know the language up to a level where you will be able to write some scripts and run Python code as an executable program, or in a notebook environment.\n",
+    "In this course you will get to know the programming language **Python**. You will get to know the language up to a level where you will be able to write basic scripts and custom modules and classes. You will know how to run Python code as an executable program, in an interactive loop (e.g. QTconsole), or in a notebook environment such as Jupyter.\n",
     "\n",
-    "Since this is the preferred way for a majority of data scientists, and a convenient form for educational purposes, we will start in a notebook setting. The document you are currently reading is a **Jupyter** notebook. A scientific notebook is an electronic  document used for **literate programming**. In literate programming, text (usually in the form of **Markdown**), code, and its output (both textual and graphical) are combined."
+    "Since this is the preferred way for a majority of data scientists, and a convenient form for educational purposes, we will mainly focus on the notebook environment. The document you are currently reading is a **Jupyter** notebook rendered into an e-Book ([Jupyterbook](https://jupyterbook.org/))."
    ]
   },
   {
@@ -23,10 +23,23 @@
     }
    },
    "source": [
-    "## An example\n",
+    "## Calculating the surface area of triangles\n",
+    "In this chapter we will walk through an entire coding case to create a standalone program that can be executed in a terminal environment (MacOS & Linux: terminal, Windows: Command Prompt).  \n",
+    "The case is a trivial example: calculating the surface area of triangles."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "### Variables\n",
     "\n",
     "Suppose I want to calculate the surface of three different equilateral triangles, with sides 3, 4 and 2.21 respectively.\n",
-    "First I define a **variable** representing the side and assign an initial value to it. To inspect the value of a variable at any given time you can `print()` it."
+    "First I define a **variable** representing the length of all equal sides and assign an initial value to it. To inspect the value of a variable at any given time you can `print()` it."
    ]
   },
   {
@@ -55,11 +68,12 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "slide"
     }
    },
    "source": [
-    "Note the use of `#text` to add human-readable comments to the code. Everything on a line after `#` will be ignored when evaluating the cell."
+    "### Comments\n",
+    "Note the use of `#text` to add human-readable comments to the code. In all Python code (notebook code cell, script and repl console), everything on a line after `#` will be ignored when evaluating the cell. When using an editor with syntax highlighting this will be shown clearly with a grey or other light color, as in the cell above."
    ]
   },
   {
@@ -70,12 +84,11 @@
     }
    },
    "source": [
-    "<div class=\"alert alert-block alert-info\">\n",
-    "    <img src=\"pics/64px-Simple_Information.png\" style=\"float:left;margin-right:10px;\">\n",
-    "    <span style=\"display:block;overflow:hidden;\">\n",
-    "        <strong>Code comments</strong><br> Any text occurring on a line after a hash symbol <code>#</code> will be ignored by the python interpreter. Text after a hash is called code comment. <br><br>\n",
-    "    </span>\n",
-    "</div>"
+    "```{admonition} Code comments\n",
+    ":class: note\n",
+    "Any text occurring on a line after a hash symbol `#` will be ignored by the python interpreter.  \n",
+    "Text after a hash is called code comment.\n",
+    "```"
    ]
   },
   {
@@ -86,8 +99,21 @@
     }
    },
    "source": [
-    "`print()` is a **function** that can be used to display text on the console (or in a notebook).  \n",
-    "If it is the last statement in a notebook cell, you can simply type the name of the variable you want to see without wrapping it in a call to print().\n"
+    "### Functions\n",
+    "The phrase `print` is the name of a **function**. This particular function can be used to display text on the console (or as output from a code cell). Arguments to a function are passed between a pair of parentheses `()`. \n",
+    "\n",
+    "A function is a re-usable piece of code, accessible by its name. It can receive input data (arguments) specified by its parameters, passed into the function between a pair of parentheses `()`.  \n",
+    "Even if there are no arguments to be passed, the parentheses are mandatory.  \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```{admonition} Displaying results of a cell\n",
+    ":class: note\n",
+    "The result of the last expression in a notebook cell will be displayed even if it is not `print()`-ed explicitly.\n",
+    "```"
    ]
   },
   {
@@ -98,23 +124,16 @@
     }
    },
    "source": [
-    "<div class=\"alert alert-block alert-info\">\n",
-    "    <img src=\"pics/64px-Simple_Information.png\" style=\"float:left;margin-right:10px;\">\n",
-    "    <span style=\"display:block;overflow:hidden;\">\n",
-    "        <strong>Functions</strong><br>A function is a re-usable piece of code, accessible by its name. It can receive input data (arguments) specified by its parameters. These are passed to the function between parentheses. For instance, <code>print(..., sep=\" \")</code> is a function named print that can receive any number of arguments to print (...) that will be displayed on the console separated by the value specified with the \"sep\" parameter. You can create your own functions very easily as will be shown later.\n",
-    "    </span>\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "Next, I use the `side` variable to calculate the surface of a 3 - 3 - 3 triangle. The formula is $\\frac{1}{2} * width * height$, but since it is equilateral we can simply use $\\frac{1}{2} * side^2$"
+    "### Operators\n",
+    "Next, I use the `side` variable to calculate the surface of a 3 - 3 - 3 triangle:\n",
+    "\n",
+    "The formula to calculate the surface area of a triangle is \n",
+    "$$\\frac{1}{2} * width * height$$\n",
+    "but since it is equilateral we can simply use\n",
+    "$$\\frac{1}{2} * side^2$$\n",
+    "\n",
+    "To calculate this, you will need to combine data in a mathematical ways such as addition, subtraction, multiplication, division etc. We call the symbols that signal these mathematical operations _operators_.  \n",
+    "Below you see two of these: `*` and `**`."
    ]
   },
   {
@@ -148,22 +167,32 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "skip"
     }
    },
    "source": [
-    "<div class=\"alert alert-block alert-info\">\n",
-    "    <img src=\"pics/64px-Simple_Information.png\" style=\"float:left;margin-right:10px;\">\n",
-    "    <span style=\"display:block;overflow:hidden;\">\n",
-    "        <strong>Operators</strong><br> \n",
-    "        Operators such as <code>*</code> and <code>**</code> are (combinations of) symbols within Python code that <i>operate</i> on (usually) the two values on either side of it (named <i>operands</i>), and that will generate a new value from these two input values. \n",
-    "        We call this combination an <i>expression</i>. <br> \n",
-    "        For instance, <code>+</code> is the addition operator that takes the values on either side and returns the sum of the two.\n",
-    "        Other mathematical operators are, not surprisingly, minus (<code>-</code>), plus (<code>+</code>), division (<code>/</code>). <br> \n",
-    "        There are many more operators, classified as <i>mathematical</i> (like the above), <i>assignment</i> (like the `=` symbol in the above cells), <i>comparison</i> operators (such as \"&lt;\"), and some more categories. A complete listing of operators can be found <a href=\"https://www.w3schools.com/python/python_operators.asp\">here</a> or \n",
-    "        <a href=\"https://www.tutorialspoint.com/python/python_basic_operators.htm\">here</a>.\n",
-    "    </span>\n",
-    "</div>"
+    "```{admonition} Operators\n",
+    ":class: note\n",
+    "Operators such as `*` and `**` are (combinations of) symbols within Python code that _operate_ on (usually) the two values on either side of it (named _operands_), and that will generate a new value from these two input values. \n",
+    "We call this combination an _expression_.  \n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "source": [
+    "The mathematical operators in Python are not a big surprise: `+` is the addition operator that takes the values on either side and returns the sum of the two.\n",
+    "Other mathematical operators are minus (`-`), plus (`+`), division (`/`).  \n",
+    "\n",
+    "There are many more operators, classified as _mathematical_ (like the above), _assignment_ (like the `=` symbol in the above cells), _comparison_ operators (such as `<`), and some more categories.  \n",
+    "\n",
+    "A complete listing of operators can be found [here](https://www.w3schools.com/python/python_operators.asp) or \n",
+    "[here](https://www.tutorialspoint.com/python/python_basic_operators.htm)"
    ]
   },
   {
@@ -174,11 +203,14 @@
     }
    },
    "source": [
-    "This:\n",
+    "### Format strings\n",
+    "In the code cell above you may have noticed the use of this:\n",
+    "\n",
     "```python\n",
     "f'The area of an equilateral triangle with side {side} is {area}'\n",
     "```\n",
-    "is a format string; a series of characters in which we can insert values from python variables at the location of the curly braces to produce this:  \n",
+    "\n",
+    "The structure `f'Some text with {variable}'` is a _format string_. A format string is character sequence in which we can insert values from python variables or expressions at the location of the curly braces to produce this:  \n",
     "  \n",
     "`'The area of an equilateral triangle with side 3 is 4.5'`\n"
    ]
@@ -191,13 +223,15 @@
     }
    },
    "source": [
-    "Until a few Python versions ago we could not use these _format strings_ and needed to write this:\n",
+    "Until a few Python versions ago we could not use format strings and needed to write this:\n",
     "\n",
     "`print(\"The area of an equilateral triangle with side \", side, \" is \", area)'`\n",
     "\n",
     "instead of this:\n",
     "\n",
-    "`f'The area of an equilateral triangle with side {side} is {area}'`"
+    "`f'The area of an equilateral triangle with side {side} is {area}'`\n",
+    "\n",
+    "A big improvement!"
    ]
   },
   {
@@ -208,7 +242,9 @@
     }
    },
    "source": [
-    "Now I want to do the same calculation and reporting for other triangles. I could just copy-and-paste all code, as in the cell below:"
+    "### Custom functions\n",
+    "\n",
+    "Now I want to do the same calculation and reporting for triangles with other side lengths. I could just copy-and-paste all code, as in the cell below:"
    ]
   },
   {
@@ -252,9 +288,9 @@
    "source": [
     "This is awful!   \n",
     "\n",
-    "Copy-and-paste activities are a real no-no in programming.  \n",
-    "Whenever you catch yourself using Ctrl+C & Ctrl+V, stop and consider a better way to do it.  \n",
-    "In many cases this will result in extracting the copied code into a **function**.  "
+    "Copy-and-paste activities are a real no-no in programming. Whenever you catch yourself using Ctrl+C & Ctrl+V, stop and think of a better way to do it.  \n",
+    "\n",
+    "In many cases this will result in extracting the copied code into a custom **function**.  "
    ]
   },
   {
@@ -265,7 +301,7 @@
     }
    },
    "source": [
-    "Below, the re-used piece of code is embedded in the function `triangle_area()`."
+    "Below, the re-used piece of code is embedded in the function named `triangle_area`. It takes a single argument named `side` which is implicitly assumed to be a number."
    ]
   },
   {
@@ -287,22 +323,11 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "source": [
-    "We'll visit the theory and practice of functions in a later chapter. Suffice to know here is that a named piece of code has been defined which can be used by that name when it is also given a value for its input argument, `side`. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
      "slide_type": "slide"
     }
    },
    "source": [
-    "With this function defined (and loaded) it is easy to repeat the operation for a series of values:"
+    "With this function defined (and loaded) it is easy to repeat the operation for a whole series of values:"
    ]
   },
   {
@@ -338,7 +363,8 @@
     }
    },
    "source": [
-    "But wait! There is still copied code. Taking a leap forward in Python programming concepts - the `for` loop, here is an even better way to do it."
+    "### Flow control: a \"loop\"\n",
+    "But wait! There is still copied code. We now take a leap forward in Python programming concepts. We use the `for` loop to _iterate_ over a collection of values and a `list`, which is an ordered collection of values maintained as a single unit. Here is a solution that does not use copied code at all."
    ]
   },
   {
@@ -378,7 +404,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
@@ -386,10 +411,12 @@
     }
    },
    "source": [
-    "## A real program\n",
+    "## Bring it together in a program\n",
     "\n",
     "By now you may be thinking that this does not look like programming at all. Where is the program?\n",
-    "Actually there is no program here. A program is usually a piece of functionality on a computer or other device that receives some input (keyboard, mouse, touchscreen, sensor, etc.) and generates some output (screen, terminal, file, database).\n"
+    "Actually, there is there is programming code but no standalone program here.\n",
+    "\n",
+    "A program is usually a piece of functionality on a computer or other device that receives some input (keyboard, mouse, touchscreen, sensor, etc.) and generates some output (screen, terminal, file, database)."
    ]
   },
   {
@@ -400,7 +427,7 @@
     }
    },
    "source": [
-    "Given the triangle example above, a standalone program for calculating and reporting triangle surface area would look like this:"
+    "Given the triangle example above, a standalone terminal program for calculating and reporting triangle surface area would look like the cell below.  "
    ]
   },
   {
@@ -414,14 +441,15 @@
     "```python\n",
     "'''This program calculates the surface of equilateral triangles with sides given on the command line.'''\n",
     "\n",
-    "import sys\n",
+    "import sys                            # non-core language functionality needs to be imported\n",
     "\n",
     "def print_triangle_area(side):\n",
+    "    '''Calculates the area of a triangle with given side.'''\n",
     "    area =  0.5 * side**2\n",
     "    print(f'The area of an equilateral triangle with side {side} is {round(area, 2)}')\n",
     "\n",
-    "for arg in sys.argv[1:]:\n",
-    "    side = float(arg)\n",
+    "for arg in sys.argv[1:]:              # loop the command-line arguments\n",
+    "    side = float(arg)                 # convert to number (command line args are always character data)\n",
     "    print_triangle_area(side)\n",
     "```"
    ]
@@ -437,7 +465,7 @@
     "\n",
     "Suppose this code is stored in a text file (e.g. 'triangle_surface.py') on your computer it could be run from a terminal (Linux or MacOS) or command prompt (Windows) using the command \n",
     "\n",
-    "```bash\n",
+    "```\n",
     "> python3 triangle_surface.py 3 4 2.21\n",
     "The area of an equilateral triangle with side 3 is 4.5\n",
     "The area of an equilateral triangle with side 4 is 8.0\n",
@@ -464,39 +492,12 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "skip"
-    }
-   },
+   "metadata": {},
    "source": [
-    "## Excercises\n",
-    "\n",
-    "These assume that you already have Python3 installed on your device. Use the Qt console from Anaconda Navigator for these. Alternatively you can use the terminal Python 3 REPL (Read, Evaluate Print Loop) engine by typing `python3` (so without any argument) in the Terminal or Command prompt. Both options provide an interactive Python session we call a REPL (for Read Evaluate Print Loop).  \n",
-    "\n",
-    "1. First enter `import math` and press enter to load the math module. \n",
-    "\n",
-    "2. Inspect the value of `math.pi` and try out the function `math.sqrt()`.\n",
-    "\n",
-    "3. Calculate the following (using `math.pi` and `math.sqrt()` where relevant).  \n",
-    "\n",
-    "    - $\\frac{4.6 + 1.2}{2.09}$ \n",
-    "    - $3\\times4^\\frac{7}{12}$\n",
-    "    - $r = 6$ <br />\n",
-    "      $\\frac{2}{3}\\times \\pi r^3$  \n",
-    "    - $5 \\times (\\frac{4 + 2}{\\sqrt{7} \\times 9})$\n",
-    "  \n",
-    "4. On your computer, create a folder that will hold the exercises of this course. In it, put a copy of the above script [triangle_surface.py](./scripts/triangle_surface.py). Run the script as demonstrated above. Try out some other command-line arguments.\n",
-    "\n",
-    "5. Change the script at some points and investigate the effect:\n",
-    "    - comment-out (e.g. put a hash symbol `#` in front of it) the `import sys` statement\n",
-    "    - change `float(side)` to `int(side)`\n",
-    "    - change `sys.argv[1:]` to `sys.argv[2]` and to `sys.argv[2:]`\n",
-    "    - use your imagination and experiment further\n"
+    "## Key Concepts"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
@@ -504,7 +505,7 @@
     }
    },
    "source": [
-    "## Key concepts\n",
+    ":::{important} \n",
     "\n",
     "- **(computer) program**: a computer program is a sequence or set of instructions in a programming language that a computer (or other device) can execute or interpret.\n",
     "- **flow control**: programming elements that control the flow of a program. Flow control elements are used for iteration and conditional execution.\n",
@@ -515,7 +516,8 @@
     "- **operator**: a symbol that operates on operands, usually on both sides, together forming an expression.\n",
     "- **Python**: a very popular _programming language_, praised for its ease of learning and use and applicability in a wide range of programming challenges.  \n",
     "- **script**: a text file with computer code that can be executed as a program, usually by the _interpreter_ for the programming lanuage used.\n",
-    "- **variable**: a program element that couples a name to a memory location with some contents."
+    "- **variable**: a program element that couples a name to a memory location with some contents.\n",
+    ":::"
    ]
   }
  ],
