--- a/02_data.ipynb
+++ b/02_data.ipynb
@@ -8,11 +8,13 @@
     }
    },
    "source": [
-    "# Data\n",
-    "Without data there is not much computing to be done. All programs take data as input (from file, a database, keyboard, a GUI) and most of them also generate data as output.  \n",
-    "In essence, there are only a few basic types of data: text and numbers. Data can be aggregated in more complex structures such as collections and objects.\n",
+    "# It's all about data\n",
+    "Without data there is not much computing to be done. All programs take data as input and most of them also generate data as output.  \n",
+    "Input can come from a variety of sources: from file, a database, keyboard, a GUI, web socket and output can go to different destinations as well.\n",
     "\n",
-    "In this chapter we'll explore the different base data types of Python, both **scalar** and **collection**.  \n",
+    "There are only a few basic types of data: text and numbers (and booleans). However, data can be aggregated into more complex structures such as collections and objects.\n",
+    "\n",
+    "In this chapter we'll explore the different core data types of Python, both **scalar** and **collection**.  \n",
     " "
    ]
   },
@@ -160,11 +162,15 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "skip"
     }
    },
    "source": [
-    "When reading from the command-line args (terminal) or from file, your data will always be character data, even though they are numeric. You always need to do the conversion yourself (unless you use dedicated libraries for it). "
+    "```{admonition} Data from outside is always string!\n",
+    ":class: important\n",
+    "\n",
+    "When reading from the command-line (terminal) or from file, your data will always be character data, even though they are numeric. You always need to do the conversion yourself, unless you use dedicated libraries for reading from file. \n",
+    "```"
    ]
   },
   {
@@ -175,9 +181,12 @@
     }
    },
    "source": [
-    "### Exercise 2.1\n",
+    "```{admonition} Exercise\n",
+    ":class: tip\n",
+    "\n",
     "Try some conversions yourself.  \n",
-    "Figure out why some fail and some do not (sometimes where you expected it), what the result is and what the logic behind the conversion is. Especially conversions to `bool` are interesting and very relevant in `if <condition>:` blocks. "
+    "Figure out why some fail and some do not (sometimes where you expected it), what the result is and what the logic behind the conversion is. Especially conversions to `bool` are interesting and very relevant in `if <condition>:` blocks. \n",
+    "```"
    ]
   },
   {
@@ -190,7 +199,7 @@
    "source": [
     "### Mathematical operators with strings?\n",
     "\n",
-    "Yes, some math operators work with string as well, but not all:"
+    "Yes, some math operators work with strings as well, but not all:"
    ]
   },
   {
@@ -291,11 +300,11 @@
     "### Slicing\n",
     "A any sequence type can be considered as a street with houses. The house number identifies a house within the street. In Python these addresses start at zero, but unlike house numbers you can also start from the end, with -1:   \n",
     "\n",
-    "<code style=\"font-size: x-large; font-weight: bold; color: darkred\">\n",
-    " 0  1  2  3  4  5  6  7 \t\n",
-    " A  B  C  D  E  F  G  H\n",
-    "-8 -7 -6 -5 -4 -3 -2 -1\n",
-    "</code>\n",
+    "<pre style=\"font-size: x-large; font-weight: bold; color: darkred;\">\n",
+    " 0  1  2  3  4  5  6  7 \n",
+    " A  B  C  D  E  F  G  H  \n",
+    "-8 -7 -6 -5 -4 -3 -2 -1  \n",
+    "</pre>\n",
     "\n",
     "You can access a single house, a range of houses or in a pattern. All this is done using **slicing**. Its general syntax is `[start:stop:step]`.  \n"
    ]
@@ -315,6 +324,34 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "source": [
+    "```{admonition} indexing quirks\n",
+    ":class: important\n",
+    "\n",
+    "Python is zero-based which means 'addresses' always start at 0.  \n",
+    "In series indexing such as in `[,]` and `range()`, the 'to'-part is always _exclusive_.  \n",
+    "So, `[1, 3]` will select the second and third element!\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "source": [
+    "Here are some indexing examples."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -330,6 +367,17 @@
     "print(f'The character(s) selected by letters[3] are {letters[3]}')\n",
     "print(f'The character(s) selected by letters[-3] are {letters[-3]}')\n",
     "print(f'The character(s) selected by letters[2:6] are {letters[2:6]}')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "source": [
+    "And here some slicing examples."
    ]
   },
   {
@@ -358,7 +406,8 @@
     }
    },
    "source": [
-    "As you can see, when the step is negative (last 2 examples), start and stop will be \"reversed\". I don't understand this design decision."
+    "As you can see, when the step is negative (last 2 examples), start and stop will be \"reversed\".  \n",
+    "I personaally don't understand this design decision."
    ]
   },
   {
@@ -369,14 +418,16 @@
     }
    },
    "source": [
-    "#### Exercise\n",
+    "```{admonition} Exercise\n",
+    ":class: tip\n",
     "\n",
     "Given the string `txt = 'aA.bB.cC.dD.eE.fF.gG.hH.zZ'`, write code using string slicing to print to screen  \n",
     " \n",
     "- `\"abcdefgz\"`\n",
     "- `\"........\"` \n",
     "- `\"BCDEFGH\"` \n",
-    "- `'bC.fG.'`"
+    "- `'bC.fG.'`\n",
+    "```\n"
    ]
   },
   {
@@ -401,10 +452,10 @@
     }
    },
    "source": [
-    "### Meet the dot operator and objects\n",
+    "### The dot operator works on _objects_\n",
     "\n",
     "So far I have skipped the point that Python is an **Object-Oriented** programming language.  \n",
-    "Being object-oriented means the (almost) everything is being modeled as an entity with data and behaviour (e.g. methods) where the objects' **class** holds the _blueprint_ for creating objects (instances) according to that blueprint.  \n"
+    "Being object-oriented means that everything is being modeled as an entity with data and behaviour (e.g. methods) where the objects' **class** holds the _blueprint_ for creating objects (instances) according to that blueprint.  \n"
    ]
   },
   {
@@ -434,25 +485,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "HELLO\n",
+      "2\n",
+      "['Hi', 'I', 'am', 'a', 'programmer']\n",
+      "A+B+C\n",
+      "     Hello\n",
+      "Foo Bar Baz\n"
+     ]
+    }
+   ],
    "source": [
     "s1 = \"Hello\"\n",
     "print(s1.upper())      # every character to uppercase\n",
-    "\n",
     "print(s1.find(\"ll\"))   # find('str') gives the index where a given substring occurs (or -1 if not present)\n",
-    "\n",
     "print(\"Hi I am a programmer\".split(\" \"))    # split on space to get a list of words\n",
-    "\n",
-    "print(.join(\"ABC\")) # combine individual characters with a separator\n",
-    "\n",
+    "print('+'.join(\"ABC\")) # combine individual characters with a separator\n",
     "print(s1.rjust(10))    # right jusitify at 10 characters\n",
-    "\n",
     "print(\"foo bar baz\".title())  # make all first letters of words uppercase. Alternatively, call on the class itself: str.title(\"foo bar baz\")"
    ]
   },
@@ -464,14 +523,17 @@
     }
    },
    "source": [
-    "#### Exercise\n",
+    ":::{admonition} Exercise\n",
+    ":class: tip\n",
+    "\n",
     "Given this variable (use your own name!)\n",
     "\n",
     "```python\n",
     "name = 'Michiel Noback'\n",
     "```\n",
     "\n",
-    "use any combination of find() and slicing to print only your first name."
+    "use any combination of find() and slicing to print only your first name.\n",
+    ":::"
    ]
   },
   {
@@ -484,7 +546,7 @@
    },
    "outputs": [],
    "source": [
-    "name = 'Michiel Noback'\n",
+    "name = 'Your Name'\n",
     "# your code"
    ]
   },
@@ -496,22 +558,33 @@
     }
    },
    "source": [
-    "The dot operator works on **all objects** in Python. Of course, the set of available methods differs from type to type; a list for instance does not have `upper()`.  You may be wondering how you can recognize what is an object and what is not? Well, that one is simple: _everything in Python is an object_.  \n",
+    "The dot operator works on **all objects** in Python. Of course, the set of available methods differs from type to type. For instance, a list does not have `upper()` and string does not have `append()`.  You may be wondering how you can recognize what is an object and what is not? Well, that one is simple: _everything in Python is an object_.  \n",
     "\n",
     "Try it out!  \n",
     "\n",
-    "Use the function `type()` again to get the object type of any variable or type. There are (of course) a few exceptions: the reserved **keywords** of the language do not have a type: `and`, `if`, `not`, `for`, etc; type `help(\"keywords\")` or see [Python keywords](https://realpython.com/python-keywords/). Here are some built-in and custom types.   "
+    "Use the function `type()` to get the object type of any variable or type. There are (of course) a few exceptions: the reserved **keywords** of the language do not have a type: `and`, `if`, `not`, `for`, etc; type `help(\"keywords\")` or see [Python keywords](https://realpython.com/python-keywords/). Here are some built-in and custom types.   "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'int'>\n",
+      "<class 'builtin_function_or_method'>\n",
+      "<class 'type'>\n",
+      "<class '__main__.Foo'>\n"
+     ]
+    }
+   ],
    "source": [
     "print(type(42))\n",
     "print(type(print))\n",
@@ -571,9 +644,11 @@
     }
    },
    "source": [
-    "#### Exercise\n",
+    "```{admonition} Exercise\n",
+    ":class: tip\n",
     "\n",
-    "Given the list below, investigate whether list slicing behaves the same as with strings."
+    "Given the list below, investigate whether list slicing behaves the same as with strings.\n",
+    "```\n"
    ]
   },
   {
@@ -600,7 +675,7 @@
    "source": [
     "#### Multidimensional lists\n",
     "\n",
-    "Since you can put any Python data type in a list, it is easy to create a multidimensional list (matrix). \n",
+    "Since you can put any Python data type in a list, it is possible to create a multidimensional list. When it has two dimensions we also call thiis a matrix. \n",
     "\n",
     "```python\n",
     "numbers = [[1, 2], [3, 4], [5, 6]]\n",
@@ -608,7 +683,7 @@
     "numbers[2][1] # gives [6]\n",
     "```\n",
     "\n",
-    "Note that Python has dedicated libraries for working with datastructures of this type: Numpy (number crunching) and Pandas (spreadsheet type data)."
+    "Note that Python has dedicated libraries for working with datastructures of this type: Numpy (number crunching) and Pandas (spreadsheet type data), so if you find yourself really getting into this domain you should really check these out."
    ]
   },
   {
@@ -874,8 +949,28 @@
     "### Collection type `dict`: {}\n",
     "\n",
     "The last collection type discussed here is the dict, which is an abbreviation of _dictionary_.  \n",
-    "It is used to hold mappings between _keys_ and _values_, much like real dictionaries.  \n",
-    "Like sets, the keys of a dict must be immutable types. There are no restrictions for the values. Also like sets, the keys are always unique. The values, however, can contain duplicates.  \n",
+    "It is used to hold mappings between _keys_ and _values_, much like real dictionaries. \n",
+    "\n",
+    "A dict can be created as a literal in as follows:\n",
+    "\n",
+    "```python\n",
+    "fruit_supply = {'apple': 5, 'pear': 2, 'orange': 4}\n",
+    "```\n",
+    "\n",
+    "This says \"for key apple the corresponding value is 5\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "Like sets, the keys of a dict must be immutable types. There are no restrictions for the values. Also like sets, the keys are always unique. The values, however, may contain duplicates.  \n",
+    "Values can be of any data type: numbers, strings, lists, other dicts...  \n",
+    "\n",
     "Dicts cannot be sliced, but finding values is done using `dictionary[key]`.\n"
    ]
   },
@@ -916,8 +1011,12 @@
     }
    },
    "source": [
-    "#### DIY\n",
-    "Now take some time to figure out what the `dict` methods `setdefault()` and `getdefault()` are for and how they are used. Try them out!"
+    "```{admonition} Exercise\n",
+    ":class: tip\n",
+    "\n",
+    "Now take some time to figure out what the `dict` methods `update()` and `pop()` are intended for and how they are used. Try them out!  \n",
+    "Feel free to try some other methods. Remember, `help(dict)` gives you almost all the information you need.\n",
+    "```\n"
    ]
   },
   {
@@ -993,31 +1092,44 @@
     }
    },
    "source": [
-    "#### Exercise\n",
+    "```{admonition} Exercise\n",
+    ":class: tip\n",
     "\n",
     "Use the above (sequence of) resources to find out how to ...\n",
     "- print three string variables as one, with a `+` between each string\n",
     "- split a sentence in a list of separate words\n",
     "- get a random number between 1 and 100\n",
-    "- round a number to 2 decimals\n"
+    "- round a number to 2 decimals\n",
+    "```\n"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "skip"
     }
    },
    "source": [
-    "## Key concepts\n",
+    "## Key concepts"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "source": [
+    ":::{important} \n",
     "\n",
     "- **collection**: variable that is composed of multiple values i.e. `list`, `set` etc.\n",
     "- **class**: A blueprint for creating objects of that type. Classes define data and -mainly- behaviour in the form of methods. These methods may be blueprint-scoped (class methods) or instance-scoped (object methods).\n",
-    "- **(im)mutable**: Indicates whether the collection can change or not.\n",
+    "- **immutable**: Means that the collection or variable can not change.\n",
     "- **keywords**: The reserved words of the programming language. These include words like `for`, `in`, `not` etc.\n",
-    "- **scalar** variable consisting of a single value.\n"
+    "- **scalar** variable consisting of a single value.\n",
+    ":::\n"
    ]
   }
  ],
@@ -1038,7 +1150,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.9.12"
   },
   "vscode": {
    "interpreter": {
