--- a/03_flow_control.ipynb
+++ b/03_flow_control.ipynb
@@ -9,7 +9,7 @@
     }
    },
    "source": [
-    "# Flow control\n",
+    "# Control the flow of things\n",
     "\n",
     "Besides data, flow control is at the heart of programming. What is the use of a list if you can't iterate it? How could you ever take alterantive courses of action based on some variable value without the use of if/else blocks?\n",
     "\n",
@@ -33,7 +33,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "fef28b59",
    "metadata": {
@@ -43,7 +42,7 @@
    },
    "source": [
     "## Code blocks\n",
-    "At the heart of iteration lies the concept of code blocks: one or multiple statements that belong together and are executed multiple times, or optionally, depending on the flow control element.  \n",
+    "All flow control elements make use of code blocks: one or multiple statements (lines) that belong together and are executed together.  \n",
     "\n",
     "A code block is defined by **indentation** (4 spaces usually), and in flow control it always follows an iteration or decision statement ending with a colon:\n",
     "\n",
@@ -59,6 +58,18 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ef601029",
+   "metadata": {},
+   "source": [
+    "```{admonition} Indent consistently\n",
+    ":class: important\n",
+    "\n",
+    "A code block always starts with a colon `:` and the subsequent lines belonging to the same block must be indented in _exactly the same way_. It is recommended to use 4 spaces. Most code editors will substitute a tab for four spaces.\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "f2201b39",
    "metadata": {
     "slideshow": {
@@ -66,13 +77,13 @@
     }
    },
    "source": [
-    "## Iteration\n",
+    "## Iteration with `for` and `in`\n",
     "\n",
-    "The keyword `for` is at the heart of iteration. All constructs involving `for` have this general structure:\n",
+    "The keywords `for` and `in` are at the heart of iteration. All constructs involving `for` have this general structure:\n",
     "\n",
     "```python\n",
     "for element in iterable:\n",
-    "    #do_something with the element\n",
+    "    #code block with the current value of element\n",
     "```\n",
     "\n",
     "Let's walk through some examples to demonstrate iteration and its details. Note that some examples can be implemented much more efficiently than shown here!\n",
@@ -89,7 +100,7 @@
     }
    },
    "source": [
-    "Here are our good old fruits:"
+    "Here are some fruits again:"
    ]
   },
   {
@@ -115,7 +126,7 @@
     }
    },
    "source": [
-    "and here is a basic iteration"
+    "and here is iteration on the fruits:"
    ]
   },
   {
@@ -196,10 +207,62 @@
    "id": "e9db2a21",
    "metadata": {
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "skip"
     }
    },
    "source": [
+    "The `enumerate()` function wraps the iteration of your collection and provides a counter value for each loop execution. It returns a tuple of `(counter_value, element)` that you can automatically unpack, as in `for i, fruit in enumerate(fruits)`.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3b71f298",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "source": [
+    ":::{admonition} Automatic unpacking of tuples\n",
+    ":class: tip\n",
+    "\n",
+    "Since functions can return only one thing, multiple return values are often wrapped into a tuple.\n",
+    "\n",
+    "When you call a function that returns a tuple, such as this one\n",
+    "\n",
+    "```python\n",
+    "def get_tup():\n",
+    "    return ('foo', 'bar')\n",
+    "```\n",
+    "\n",
+    "you can catch the tuple as a whole\n",
+    "\n",
+    "```python\n",
+    "r = get_tup()\n",
+    "```\n",
+    "\n",
+    "or unpack it automatically (implicit or explicit)\n",
+    "\n",
+    "```python\n",
+    "one, two = get_tup()\n",
+    "# same\n",
+    "(one, two) = get_tup()\n",
+    "```\n",
+    "\n",
+    ":::\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "09da0a29",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "source": [
+    "### Exiting loops and other blocks\n",
+    "\n",
     "If you are not interested in all items, but want to exit when you found a specific item? Use the **break** keyword:"
    ]
   },
@@ -522,14 +585,28 @@
     "            return \"Something's wrong with the internet\"\n",
     "        \n",
     "http_status(400)\n",
-    "```\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7c62843d",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "source": [
+    "### Switching using basic Python\n",
     "\n",
-    "Below, you see how you can create switch-like structures using a dict and adding functions as values in it. Again this uses local-defined functions."
+    "Below, you see how you can create switch-like structures using a dict and adding functions as values in it. Again this uses local-defined functions.\n",
+    "\n",
+    "You don't see this type of structure very often but they're perfectly valid as substitute for if/else or match/case. A typical use case for this would be a decision-tree that you have to execute many times in a program, for instance messaging to the user in a verbose or non-verbose manner."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "09530590",
    "metadata": {
     "slideshow": {
@@ -547,6 +624,7 @@
    ],
    "source": [
     "def demo_old_switch(fruit):\n",
+    "    # method-local defined functions\n",
     "    def banana():\n",
     "        print(\"Banana yummie!\")\n",
     "    def kiwi():\n",
@@ -554,16 +632,38 @@
     "    def default():\n",
     "        print(\"I don't know this fruit\")\n",
     "    \n",
+    "    # put the function names in a dict\n",
     "    actions = {\n",
     "        \"banana\": banana,\n",
     "        \"kiwi\": kiwi,\n",
     "        \"default\": default\n",
     "    }\n",
     "    \n",
-    "    actions.get(fruit, \"default\")()\n",
+    "    actions.get(fruit, \"default\")()     # This looks funny doesn't it?\n",
     "\n",
     "    \n",
     "demo_old_switch(\"kiwi\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0bae0c2b",
+   "metadata": {},
+   "source": [
+    "## Key concepts"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eb59e193",
+   "metadata": {},
+   "source": [
+    ":::{important} \n",
+    "\n",
+    "- **code block**: an equally indented block of code executed as a single unit. Used in flow control and functions.\n",
+    "- **flow control**: controlling the flow a a program using loops or decision structures.\n",
+    "- **iteration**: sequentially looping over a collection of elements.\n",
+    ":::"
    ]
   }
  ],
