--- a/04_functions.ipynb
+++ b/04_functions.ipynb
@@ -8,7 +8,21 @@
     }
    },
    "source": [
-    "# Functions"
+    "# Functions\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "This chapter is about functions; functions you write yourself. You create therm to perform a task that needs to execute multiple times in your program (maybe from different contexts) or that maybe even needs to be called from an entire different source file.\n",
+    "\n",
+    "We'll be looking at how to design, implement and call (use) functions. \n",
+    "The next chapter deals with an overview of some of the most-used built-in functions of the Python language."
    ]
   },
   {
@@ -26,33 +40,24 @@
     "\n",
     "Functions themselves usually call one or more functions within the function body.\n",
     "\n",
-    "Here is a very simple example:"
+    "Here is a simple example:"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "cell_type": "markdown",
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "what shall I call you? Henk\n",
-      "Goodday to you, Henk\n"
-     ]
-    }
-   ],
    "source": [
+    "```python\n",
     "def say_hello():\n",
     "    name = input(\"what shall I call you? \")\n",
     "    print(\"Goodday to you,\", name)\n",
     "\n",
-    "say_hello()"
+    "say_hello()\n",
+    "```"
    ]
   },
   {
@@ -75,9 +80,7 @@
     "    <blockquote>\n",
     "       <li> There is no check for the user input. What if the user enters an empty line? </li>\n",
     "    </blockquote>\n",
-    "</details>\n",
-    "\n",
-    "These aspects will be discussed in detail later in this chapter."
+    "</details>\n"
    ]
   },
   {
@@ -88,19 +91,19 @@
     }
    },
    "source": [
-    "In this chapter we'll be looking at how to design, implement and call (use) functions. \n",
-    "The next chapter deals with an overview of some of the most-used built-in functions of the Python language."
+    "## Creating and using functions\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "skip"
     }
    },
    "source": [
-    "## Creating and using functions\n",
+    "```{admonition} Function rules\n",
+    ":class: important\n",
     "\n",
     "Functions must  \n",
     "\n",
@@ -109,7 +112,7 @@
     "- have an argument list, but it may be empty: `()`\n",
     "- have a function body starting after a colon, indented one level with respect to the function definition line, and with at the least the keyword `pass` in it.\n",
     "\n",
-    "_Naming convention_ for functions state that they should be lowercase (verbs), with words separated by underscores to improve readability.\""
+    "The _Naming convention_ for functions states that they should be lowercase (verbs), with words separated by underscores to improve readability.\"\n"
    ]
   },
   {
@@ -128,7 +131,7 @@
     "```\n",
     "\n",
     "\n",
-    "The indentation level is usually 4 spaces, but must be the same within a single code block (and you are strongly encouraged to be consistent within all your source files). In Python, whitespaces (space, tab and newline characters) are an essential part of the syntax! "
+    "The indentation level is usually 4 spaces (but this is not required), but must be the same within a single code block. You are strongly encouraged to be consistent within all your source files.  \n"
    ]
   },
   {
@@ -139,13 +142,24 @@
     }
    },
    "source": [
-    "<div class=\"alert alert-block alert-info\">\n",
-    "    <img src=\"pics/64px-Simple_Information.png\" style=\"float:left;margin-right:10px;\">\n",
-    "    <span style=\"display:block;overflow:hidden;\">\n",
-    "        Actually, empty functions are a much-used construct in <strong>test-driven development</strong>, a programming paradigm in which a placeholder function is created first, together with an extensive <strong>test suite</strong> (a set of testing functions assessing the correctness and robustness of a function). Only then the function is iteratively implemented and marked finished when all tests pass. See \n",
-    "    <a href=\"https://en.wikipedia.org/wiki/Test-driven_development\">Wikipedia</a>\n",
-    "    </span>\n",
-    "</div>"
+    "```{important}\n",
+    "In Python, whitespaces (space, tab and newline characters) are an essential part of the syntax!\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "source": [
+    ":::{note}\n",
+    "\n",
+    "Actually, empty functions are a much-used construct in **test-driven development (TDD)**, a programming paradigm in which a placeholder function is created first, together with an extensive test suite (a set of testing functions assessing the correctness and robustness of a function). Only then the function is iteratively implemented and marked finished when all tests pass. See \n",
+    "[Wikipedia](https://en.wikipedia.org/wiki/Test-driven_development)\n",
+    ":::"
    ]
   },
   {
@@ -239,7 +253,7 @@
     }
    },
    "source": [
-    "Now for a more realistic -though still simple- example: calculating distance from speed and time. Note that in the function below the **parameters** have been given names to communicate the units in which they should be passed. Yes this is important! A Mars orbiter crashed in 1999 because of a coding mistake involving different use of measurement units, costing $193 million (see [The seven most expensive Bugs in code history](https://www.zentao.pm/blog/the-seven-most-expensive-bugs-in-code-history-1137.html)). We'll see in a later section in this chapter how to document this as well in a more human-readable manner using docstrings. "
+    "Now for a slightly more realistic example: calculating distance from speed and time. Note that in the function below the **parameters** have been given names to communicate the units in which they should be passed. Yes this is important! A Mars orbiter crashed in 1999 because of a coding mistake involving different use of measurement units, costing $193 million (see [The seven most expensive Bugs in code history](https://www.zentao.pm/blog/the-seven-most-expensive-bugs-in-code-history-1137.html)). We'll see in a later section in this chapter how to document this as well in a more human-readable manner using docstrings. "
    ]
   },
   {
@@ -295,13 +309,11 @@
     }
    },
    "source": [
-    "<div class=\"alert alert-block alert-info\">\n",
-    "    <img src=\"pics/64px-Simple_Information.png\" style=\"float:left;margin-right:10px;\">\n",
-    "    <span style=\"display:block;overflow:hidden;\">\n",
-    "        <strong>Parameters versus Arguments</strong><br>\n",
-    "        A parameter is a variable in a function definition. It is a placeholder and hence does not have a concrete value. An argument is a value passed during function invocation. In a way, arguments fill in the place the parameters have held for them.\n",
-    "    </span>\n",
-    "</div>"
+    "```{admonition} Parameters versus Arguments\n",
+    ":class: note\n",
+    "\n",
+    "A parameter is a variable in a function definition. It is a placeholder and hence does not have a concrete value. An argument is a value passed during function invocation. In a way, arguments fill in the place the parameters have held for them.\n",
+    "```"
    ]
   },
   {
@@ -674,20 +686,33 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Advanced function stuff\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
      "slide_type": "skip"
     }
    },
    "source": [
-    "### Advanced function stuff\n",
-    "Functions are also objects and can be created within another function.\n",
-    "You can pass (references to) functions around as you can with any object in Python. Moreover, functions can be defined within, and returned from, other functions. Below is an example where the `get_messenger()` function returns either a top-level function (`say_hello_anonymous`) or a **closure**, `say_hello_with_name` that even holds the value of the function variable `name` _after it has been returned from the creating function_.\n",
-    "Note that you do _not_ use parentheses when passing a function object!\n",
-    "Take a minute to figure out what is happening here. Although it is a rather short piece of code it already shows some advanced Python stuff, as well as not-yet discussed flow control with `if` and `else`."
+    "### Varargs\n",
+    "\n",
+    "If you ever looked at the documentation of the `print()` function\n",
+    "\n",
+    "`print(value, ..., sep=' ', end='\\n', file=sys.stdout, flush=False)`\n",
+    "\n",
+    "you may have noticed the `...` part. It means that `print` accepts any number of things to print after the first mandatory `value`. This concept is called \"varargs\". You can create functions yourself that behave like this. The only hting you need to do is use `*args`, as demonstrated below.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -698,12 +723,73 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Give me your name please: Mike\n",
-      "Howdy, Mike!\n"
+      "At 06/04/2023 16:08:13 you messaged foo\n",
+      "At 06/04/2023 16:08:13 you messaged bar\n",
+      "You messaged bye\n",
+      "You messaged auf wiedersehen\n"
      ]
     }
    ],
    "source": [
+    "def print_it_all(*args, add_time = True):\n",
+    "    from datetime import datetime\n",
+    "    \n",
+    "    for m in args:\n",
+    "        if add_time:\n",
+    "            now = datetime.now()\n",
+    "            print(f'At {now.strftime(\"%d/%m/%Y %H:%M:%S\")} you messaged {m}')\n",
+    "        else:\n",
+    "            print(f'You messaged {m}')\n",
+    "\n",
+    "print_it_all(\"foo\", \"bar\")\n",
+    "print_it_all(\"bye\", \"auf wiedersehen\", add_time=False)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "source": [
+    "The only restriction with varargs is that they can only be followed by \"keyword arguments\", i.e. arguments that need to be specified by name, as also shown in the example above."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```{note}\n",
+    "Working with dates and times is a really interesting and surprisingly complex topic (think Time Zones...). A very minimal tutorial for working with these can be founde on this [website](https://www.w3schools.com/python/python_datetime.asp)\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "source": [
+    "### Closures\n",
+    "Functions are also objects and can be created within another function.\n",
+    "You can pass (references to) functions around as you can with any object in Python. Moreover, functions can be defined within, and returned from, other functions. Below is an example where the `get_messenger()` function returns either a top-level function (`say_hello_anonymous`) or a **closure**, `say_hello_with_name` that even holds the value of the function variable `name` _after it has been returned from the creating function_.\n",
+    "Note that you do _not_ use parentheses when passing a function object!\n",
+    "Take a minute to figure out what is happening here. Although it is a rather short piece of code it already shows some advanced Python stuff, as well as not-yet discussed flow control with `if` and `else`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "source": [
+    "```python\n",
+    "\n",
     "def get_messenger():\n",
     "    name = input('Give me your name please: ')\n",
     "    \n",
@@ -727,7 +813,9 @@
     "    # the argument to this function is another function!\n",
     "    messenger()\n",
     "    \n",
-    "use_messenger(get_messenger())"
+    "use_messenger(get_messenger())\n",
+    "\n",
+    "```"
    ]
   },
   {
@@ -791,6 +879,42 @@
     "\n",
     "OK\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Type hints\n",
+    "\n",
+    "In larger Python programs you should make use of type hints. That is out of scope for this course but you can read about this topic on the Python [website](https://docs.python.org/3/library/typing.html).\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "source": [
+    "## Key concepts"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "source": [
+    ":::{important} \n",
+    "\n",
+    "- **scope**: The scope of a variable (or other program element such as class or function) is the visibility range for that element; which other program elements can access and read it?\n",
+    "- **function**: A function is a reusable piece of functionality which performs a single and well-defined task and handles error-conditions in a graceful manner.\n",
+    "- **parameter**: A function parameter defines an input variable.\n",
+    ":::"
    ]
   }
  ],
