--- a/05_reading_writing_files.ipynb
+++ b/05_reading_writing_files.ipynb
@@ -9,7 +9,7 @@
     }
    },
    "source": [
-    "# Files are the main source of data\n",
+    "# Reading and writing files\n",
     "\n",
     "In most data science related scripts and analysis workflows, data will enter via files. To be more precise: via text files.  \n",
     "Fortunately, reading from file is really simple in Python. "
