--- a/06_core_library_functions.ipynb
+++ b/06_core_library_functions.ipynb
@@ -441,14 +441,43 @@
   },
   {
    "cell_type": "markdown",
-   "id": "234a0880",
+   "id": "04d9184f",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
    "source": [
-    "#### Lambdas  (advanced topic)\n",
+    "#### Lambdas "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c4a798f0",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "source": [
+    ":::{admonition} Lambdas\n",
+    ":class: note\n",
+    "\n",
+    "A lambda function is a small anonymous function that is usually locally defined.\n",
+    "They can take any number of arguments but can only have a single expression.\n",
+    ":::"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "234a0880",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "\n",
     "The `sorted()` parameter `key` is most often used in conjunction with an anonymous type of function called a **lambda**. They are usually defined at the location where they are needed and have the form of\n",
     "\n",
     "```\n",
@@ -596,7 +625,7 @@
    "source": [
     "## Using `filter()` and `map()` (optional)\n",
     "\n",
-    "These functions are used on collections, to filter the elements in them on some property, or to change each element or to swap them for something else.  \n",
+    "These functions are used on collections, to filter the elements in them on some property, or to change each element or to swap them for something else. They represent important players in the filter-map-reduce functional programming paradigm.  \n",
     "\n",
     "Fot example, imagine a cupcake production line. There will be a machine taking in a plate of cupcakes and applying frosting to all of them: it **maps** a cupcake to a frosted cupcake. There will also be a machine taking in a plate of cupcakes, removing the badly formed ones: it **filters** the cupcakes, only letting the good ones pass."
    ]
@@ -682,6 +711,20 @@
     "Why load functionality if there is a significant possibility it will not be used? \n",
     "\n",
     "To solve the footprint problem, most functionality in Python is put inside **_modules_**."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "04accbec",
+   "metadata": {},
+   "source": [
+    ":::{admonition} Modules\n",
+    ":class: note\n",
+    "\n",
+    "A Python module is a file containing code that can be _imported_ into other modules, scripts or interactive sessions. A module can define functions, classes and variables. A module can also include runnable code.\n",
+    "\n",
+    "A module allows you to organize and distribute your Python code. Grouping related code into a module makes the code easier to understand and use. \n",
+    ":::"
    ]
   },
   {
@@ -1491,6 +1534,35 @@
    "source": [
     "#### JSON\n",
     "Although pickle and shelve are convenient, With serious applications JSON is the way to go. There are many libraries and programming languages with integrated support for json, and stored files are human-readable as well."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e3460093",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "source": [
+    "## Key concepts"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "269b1b22",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "source": [
+    ":::{important} \n",
+    "\n",
+    "- **lambda**: A lambda is an anonymous locally-defined function, an inline executable statement. \n",
+    "- **filter-map-reduce**: Map, Filter, and Reduce are paradigms of functional programming. See [here](https://www.learnpython.org/en/Map%2C_Filter%2C_Reduce) for more details.\n",
+    "- **module**: A module is a file containing code that can be _imported_ into other modules, scripts or interactive sessions. A module can define functions, classes and variables. \n",
+    ":::"
    ]
   }
  ],
