--- a/07_comprehensions.ipynb
+++ b/07_comprehensions.ipynb
@@ -21,7 +21,7 @@
     }
    },
    "source": [
-    "## filtering and mapping\n",
+    "## Filtering and mapping\n",
     "\n",
     "In the previous chapter there was a section on `filter()` and `map()`. These functions represent processes that are present in a majority of data processing activities.\n",
     "\n",
@@ -39,9 +39,36 @@
     }
    },
    "source": [
-    "## What are comprehensions?\n",
+    "## What are comprehensions?\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "75904908",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "source": [
+    ":::{admonition} Comprehensions\n",
+    ":class: note\n",
     "\n",
-    "Comprehensions are shorthand syntactic structures that can be used to generate, filter and map different types of collections:  \n",
+    "\n",
+    "Comprehensions are shorthand syntactic structures that can be used to generate, filter and map different types of collections\n",
+    ":::"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3b5cf497",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "There are several types of comprehensions, depending on the type of collection they generate: \n",
     "\n",
     "- **list comprehensions** generate lists using `[]`\n",
     "- **tuple comprehensions** generate tuples using the `tuple()` constructor\n",
@@ -75,7 +102,7 @@
     }
    },
    "source": [
-    "### List comprehensions\n",
+    "## List comprehensions\n",
     "The most-used type of comprehension is list comprehension, or listcomp in short.\n",
     "\n",
     "Let's implement both examples from the picture using these."
@@ -179,7 +206,7 @@
     }
    },
    "source": [
-    "#### if else shorthand in the mapping\n",
+    "### if else shorthand in the mapping\n",
     "\n",
     "The mapping operation itself can also contain flow control using if else shorthand, as in the example below"
    ]
@@ -220,7 +247,7 @@
     }
    },
    "source": [
-    "#### Nested comprehensions\n",
+    "### Nested comprehensions\n",
     "\n",
     "Comprehensions can be nested to create complex combinations and datastructures.  \n",
     "Note that when you think the code gets unclear it is time to simplify things and switch back to regular flow control."
@@ -303,7 +330,7 @@
     }
    },
    "source": [
-    "#### Some more examples\n",
+    "### Some more examples\n",
     "Below are some additional examples to give you a general idea of the possibilities. "
    ]
   },
@@ -417,7 +444,7 @@
     }
    },
    "source": [
-    "### dict comprehensions\n",
+    "## Dict comprehensions\n",
     "\n",
     "Dict comprehensions are different because they need to produce key-value pairs in the form of `key: value`."
    ]
@@ -466,7 +493,7 @@
     }
    },
    "source": [
-    "### Other comprehensions\n",
+    "## Other comprehensions\n",
     "\n",
     "Set comprehensions look a lot like dict comprehensions but they have no key: value pairs.  \n",
     "Tuples are created using the tuple constructor.  \n",
