--- a/08_exception_mechanism.ipynb
+++ b/08_exception_mechanism.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "82cb42e3",
    "metadata": {
@@ -525,7 +524,7 @@
     }
    },
    "source": [
-    "Sometimes you want to message your own error. In that case you will want to `raise` one in your code."
+    "Sometimes you want to message your own error, or \"convert\" a previously cought exception into another type. In that case you will want to `raise` an exception in your code yourself."
    ]
   },
   {
