--- a/09_regex.ipynb
+++ b/09_regex.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "4177a8d0",
    "metadata": {
@@ -61,12 +60,11 @@
     }
    },
    "source": [
-    "<div class=\"alert alert-block alert-info\">\n",
-    "    <img src=\"pics/64px-Simple_Information.png\" style=\"float:left;margin-right:10px;\">\n",
-    "    <span style=\"display:block;overflow:hidden;\">\n",
-    "        <strong>Regex</strong><br> A regular expression or regex consists of a combination of literal character sequences, character classes, quantifiers, groupings and positional anchors that can be used to search for patterns in text.<br><br>\n",
-    "    </span>\n",
-    "</div>\n"
+    ":::{admonition} Regex\n",
+    ":class: note\n",
+    "\n",
+    "A regular expression or regex consists of a combination of literal character sequences, character classes, quantifiers, groupings and positional anchors that can be used to search for patterns in text in order to locate, extract or replace the occurrences.\n",
+    ":::\n"
    ]
   },
   {
@@ -285,12 +283,13 @@
     }
    },
    "source": [
-    "<div class=\"alert alert-block alert-info\">\n",
-    "    <img src=\"pics/64px-Simple_Information.png\" style=\"float:left;margin-right:10px;\">\n",
-    "    <span style=\"display:block;overflow:hidden;\">\n",
-    "        <strong>The escape character `\\`</strong><br> The backslash '\\' has special meaning; it _escapes_ the special meaning of the following symbol, or gives it special meaning (as seen above) depending on context.<br><br>\n",
-    "    </span>\n",
-    "</div>\n"
+    ":::{admonition} The escape character `\\`\n",
+    ":class: warning\n",
+    "\n",
+    "The backslash `\\` has special meaning; it _escapes_ the special meaning of the following symbol, or gives it special meaning (as seen above) depending on context.  \n",
+    "\n",
+    "It is the cause of many programming errors and bugs, especially when the backslash itself is part of the pattern. \n",
+    ":::\n"
    ]
   },
   {
