--- a/10_oo_programming.ipynb
+++ b/10_oo_programming.ipynb
@@ -149,7 +149,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<__main__.Duck object at 0x10dc2a5e0>\n"
+      "<__main__.Duck object at 0x1110043d0>\n"
      ]
     }
    ],
@@ -183,8 +183,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<__main__.Duck object at 0x10dc2a5e0>\n",
-      "<__main__.Duck object at 0x10dc2afa0>\n"
+      "<__main__.Duck object at 0x1110043d0>\n",
+      "<__main__.Duck object at 0x111004f40>\n"
      ]
     }
    ],
@@ -269,7 +269,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The hash code is 282864336\n",
+      "The hash code is 286262450\n",
       "The class is <class '__main__.Duck'>\n",
       "The class attribute is <class '__main__.Duck'>\n",
       "mallard equals pintail:  False\n"
@@ -452,12 +452,14 @@
     }
    },
    "source": [
-    "<div class=\"alert alert-block alert-info\">\n",
-    "    <img src=\"pics/64px-Simple_Information.png\" style=\"float:left;margin-right:10px;\">\n",
-    "    <span style=\"display:block;overflow:hidden;\">\n",
-    "        <strong>Naming conventions</strong>. You may have noticed the use of uppercase characters as first letter of the classes. This is one of the <a href=\"https://peps.python.org/pep-0008/\">PEP 8 style guide</a> conventions. It states that \"Class names should normally use the CapWords convention.\" Properties (fields) and methods (functions) of classes should again follow this rule \"Function names should be lowercase, with words separated by underscores as necessary to improve readability.\"\n",
-    "    </span>\n",
-    "</div>\n"
+    ":::{admonition} Naming conventions\n",
+    ":class: note\n",
+    "\n",
+    "You may have noticed the use of uppercase characters as first letter of the classes. This is one of the [PEP 8 style guide](https://peps.python.org/pep-0008/) conventions. It states that  \n",
+    "\n",
+    "* Class names should normally use the CapWords convention. \n",
+    "* Function names should be lowercase, with words separated by underscores as necessary to improve readability.\n",
+    ":::\n"
    ]
   },
   {
@@ -567,9 +569,7 @@
    },
    "source": [
     "The `__init__()` hook makes it possible to hook into the `()` construction process by defining an argument list. In the listing in a previous paragraph some hoks are specified in class `object`. We will see a few more hooks later in this chapter.  \n",
-    "See for instance [here](https://towardsdatascience.com/a-guide-to-pythons-dunder-methods-3b8104fce335) for more details.\n",
-    "    </span>\n",
-    "</div>"
+    "See for instance [here](https://towardsdatascience.com/a-guide-to-pythons-dunder-methods-3b8104fce335) for more details.\n"
    ]
   },
   {
@@ -587,6 +587,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ada0f862",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "The `__str__()` method is a hook for interacting with the `print()` built-in. When print receives an object to print it will look for the `__str__()` method and call it."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "id": "4235192b",
@@ -600,12 +612,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<__main__.Customer object at 0x10dc7c4f0>\n"
+      "<__main__.Customer object at 0x111042af0>\n"
      ]
     }
    ],
    "source": [
     "print(cust1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "515a0350",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "source": [
+    ":::{admonition} Hooks __str__() and __repr__()\n",
+    ":class: note\n",
+    "\n",
+    "Hooks `__str__()` and `__repr__()`, targeting the built-in functions `str()` and `repr()` respectively, are both used to get a string representation of an object. However, their intent is different:  \n",
+    "\n",
+    "* `str()` is used for generating human-readable output while `repr()` is mainly used for debugging and development. \n",
+    "* repr’s goal is to be unambiguous and str’s is to be readable\n",
+    "* `repr()` fetches the “formal” string representation of an object (a representation that has all information about the object) and `str()` is used to fetch the “informal” string representation of an object.\n",
+    "* The `print()` and `str()` built-in function use `__str__()` to display the string representation of the object while the `repr()` built-in function uses `__repr__()` to display the object.\n",
+    ":::\n"
    ]
   },
   {
@@ -620,6 +653,19 @@
     "This output says it is an instance of the Customer class that is defined in the `__main__` scope and that it can be found at memory \"location\" `0x7fbe709e8fa0` - not very informative.  \n",
     "\n",
     "Time to implement `__str__()`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6be47a9b",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "### The `Performance` class\n",
+    "Similar to the Customer class we can now implement the Performance class. The properties listed above are \"title\", \"datetime\", \"seat_price\", \"max_seats\" and \"reserved_seats\". All properties except the last one (which will simply default to 0) are useful to specify at construction time. Here is a first version."
    ]
   },
   {
@@ -651,54 +697,6 @@
     "\n",
     "cust2 = Customer(\"Julia\", \"Marsh\", \"j.marsh@example.com\")\n",
     "print(cust2)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ada0f862",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "source": [
-    "The `__str__()` method is a hook for interacting with the `print()` built-in. When print receives an object to print it will look for the `__str__()` method and call it."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "515a0350",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "<div class=\"alert alert-block alert-info\">\n",
-    "    <img src=\"pics/64px-Simple_Information.png\" style=\"float:left;margin-right:10px;\">\n",
-    "    <span style=\"display:block;overflow:hidden;\">\n",
-    "        <h4>Hooks __str__() and __repr__()</h4>\n",
-    "        Hooks <code>__str__()</code> and <code>__repr__()</code>, targeting the built-in functions <code>str()</code> and <code>repr()</code> respectively, are both used to get a string representation of an object. However, their intent is different:<br>\n",
-    "        <ul>\n",
-    "        <li>str() is used for generating human-readable output while repr() is mainly used for debugging and development. <i>repr’s goal is to be unambiguous and str’s is to be readable</i>.</li>\n",
-    "        <li>repr() fetches the “formal” string representation of an object (a representation that has all information about the object) and str() is used to fetch the “informal” string representation of an object.</li>\n",
-    "        <li>The print() and str() built-in function use __str__() to display the string representation of the object while the repr() built-in function uses __repr__() to display the object.</li>\n",
-    "        </ul>\n",
-    "    </span>\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6be47a9b",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "### The `Performance` class\n",
-    "Similar to the Customer class we can now implement the Performance class. The properties listed above are \"title\", \"datetime\", \"seat_price\", \"max_seats\" and \"reserved_seats\". All properties except the last one (which will simply default to 0) are useful to specify at construction time. Here is a first version."
    ]
   },
   {
@@ -768,7 +766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 12,
    "id": "3d38bcd5",
    "metadata": {
     "slideshow": {
@@ -955,7 +953,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "id": "5485186c",
    "metadata": {
     "slideshow": {
@@ -1004,7 +1002,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 16,
    "id": "79d444e4",
    "metadata": {
     "slideshow": {
@@ -1065,7 +1063,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 17,
    "id": "d379554d",
    "metadata": {
     "slideshow": {
@@ -1141,7 +1139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 18,
    "id": "43a12f26",
    "metadata": {
     "slideshow": {
@@ -1182,7 +1180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 19,
    "id": "10ab7b6f",
    "metadata": {
     "slideshow": {
